fix: Enhance scrollbar visibility settings and add ScrollBackToTopButton component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,16 @@ body {
   /* font-family: var(--font-supercell), sans-serif; */
 }
 
+/* Hide scrollbars but keep functionality */
+::-webkit-scrollbar {
+  display: none;
+}
+
+*{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 
 @layer utilities {
   .text-3d {
